SC/20: Comment out missing graphics.
Clearly the SCUBA-2 logo from SC/21 is wrong.  We need an ACSIS logo.

The LateX now builds.

--- a/docs/sc/020/sc20v1.tex
+++ b/docs/sc/020/sc20v1.tex
@@ -447,7 +447,7 @@
 %   e.g. \includegraphics[scale=0.3]{filename.ps}
 % ? End of picture
    \begin{center}
-   \includegraphics[scale=0.4]{sc21_s2logo}
+%   \includegraphics[scale=0.4]{sc21_s2logo}
    \end{center}
    \vspace{5mm}
    \rule{\textwidth}{0.5mm}\\
@@ -474,7 +474,7 @@
 
 % ? Add picture here if required for the hypertext version.
 %   e.g. \includegraphics[scale=0.5]{filename.ps}
-   \includegraphics[width=90mm]{sc21_s2logo}
+%   \includegraphics[width=90mm]{sc21_s2logo}
 % ? End of picture
 
    \begin{rawhtml} <P> <I> \end{rawhtml}
@@ -2907,7 +2907,7 @@ In the example above, the additional option \param{lmode} is included. This sets
 
 This example plots a grid of 4$\times$4 pixels around $l=61.06^\circ$ and $b=0.15^\circ$. Each spectra has a range of 0 to 40 km/s.  The \param{specstyle} option allows you to format the spectal axes inside the main plot. The formatting options are the usual plotting attributes.
 \end{itemize}
-\myfig{sc20_clinplot}{[h!]}{width=0.55\linewidth}{fig:display6}{Displaying a grid of spectra with \clinplot.}{Displaying a grid of spectra with \clinplot.}
+%\myfig{sc20_clinplot}{[h!]}{width=0.55\linewidth}{fig:display6}{Displaying a grid of spectra with \clinplot.}{Displaying a grid of spectra with \clinplot.}
 
 
 \subsubsection{Plotting two images side by side}
