--- a/applications/gaia/sun214.tex
+++ b/applications/gaia/sun214.tex
@@ -1,33 +1,30 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {214.44}
-\newcommand{\stardocauthors}   {Peter W. Draper,
+\stardocnumber      {214.44}
+\stardocauthors   {Peter W. Draper,
                                 Norman Gray,
                                 David S. Berry \&
                                 Mark Taylor }
-\newcommand{\stardocdate}      {16nd January 2014}
-\newcommand{\stardoctitle}     {GAIA --
+\stardocdate        {16th January 2014}
+\stardoctitle     {GAIA --
                                 Graphical Astronomy and Image Analysis Tool}
-\newcommand{\stardocversion}   {4.4-4}
-\newcommand{\stardocmanual}    {User's Manual}
+\stardocversion     {4.4-4}
+\stardocmanual      {User's Manual}
+\startitlepic {\includegraphics[width=0.6\textwidth]{sun214_fig}}
 
-\newcommand{\stardocabstract} {GAIA is an image and data-cube display
+\stardocabstract {GAIA is an image and data-cube display
 and analysis tool for astronomy. It provides the usual facilities of image
 display tools, plus more astronomically useful ones such as aperture \&
 optimal photometry, contouring, source detection, surface photometry,
@@ -40,249 +37,16 @@ well as perform full 3D rendering.}
 % ? End of document identification
 % -----------------------------------------------------------------------------
 
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-\newcommand{\mytt}[1]{{\texttt{#1}}}
-\newcommand{\mybold}[1]{{\textbf{#1}}}
+% ? Document specific \providecommand or \newenvironment commands.
+\providecommand{\mytt}[1]{{\texttt{#1}}}
+\providecommand{\mybold}[1]{{\textbf{#1}}}
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Large\textbf{\stardoctitle \\ [2.5ex]}}
-   \vspace{5mm}
-% ? Add picture here if required for the LaTeX version.
-   \includegraphics[totalheight=5in]{sun214_fig}
-% ? End of picture
-   \end{center}
-
-% ? Heading for abstract if used.
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> <FONT COLOR="#000099">\end{rawhtml}
-   \begin{center}
-      \stardoctitle
-    \end{center}
-   \begin{rawhtml} </FONT></H1> \end{rawhtml}
-
-% ? Add picture here if required.
-   \begin{center}
-   \htmladdimg{sun214.png}
-   \end{center}
-% ? End of picture
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
 
@@ -347,52 +111,51 @@ If you need help beyond what is available in these resources, or have
 any suggestions for improvements, then join the Starlink user support
 mailing lists at
 \begin{quote}
-\htmladdnormallink{\mytt{http://www.starlink.ac.uk}}{http://www.starlink.ac.uk}.
+\url{http://www.starlink.ac.uk}
 \end{quote}
 The GAIA home page is at:
 \begin{quote}
-\htmladdnormallink{\mytt{http://www.starlink.ac.uk/gaia/}}{http://www.starlink.ac.uk/gaia/}.
+\url{http://www.starlink.ac.uk/gaia/}
 \end{quote}
 which may be updated from time-to-time. GAIA is available for download
 as part of JAC Starlink Release at:
 \begin{quote}
-\htmladdnormallink{\mytt{http://starlink.jach.hawaii.edu}}{http://starlink.jach.hawaii.edu}.
+\url{http://starlink.jach.hawaii.edu}
 \end{quote}
 
 \subsection{\xlabel{using_gaia_from_the_cshell}Using GAIA from the C-shell}
 
 To display an image in GAIA use the following command
 (assuming that you are already initialized to use Starlink software):
-\begin{quote}
-\mytt{\% gaia image\_name}
-\end{quote}
+\begin{terminalv}
+% gaia image_name
+\end{terminalv}
 Alternatively you can use the \mytt{File} menu to load an image.
 
 If you want to display an image in an existing GAIA then use the
 invocation:
-\begin{quote}
-\mytt{\% gaiadisp image\_name}
-\end{quote}
+\begin{terminalv}
+% gaiadisp image_name
+\end{terminalv}
 You can also write to a specific window using the clone number:
-\begin{quote}
-\mytt{\% gaiadisp image\_name 2}
-\end{quote}
+\begin{terminalv}
+% gaiadisp image_name 2
+\end{terminalv}
 This displays into the window with title \mytt{GAIA::SkyCat (2)}.
 If this window doesn't exist it will be created.
 
 A list of images can be displayed in GAIA using the command:
-\begin{quote}
-\mytt{\% gaiadisp image\_name1 image\_name2 image\_name3 ...}
-\end{quote}
+\begin{terminalv}
+% gaiadisp image_name1 image_name2 image_name3 ...
+\end{terminalv}
 These will be displayed in separate clones. Finally percentile or
-data cuts can be applied using the \mytt{-p} option or \mytt{-l} and 
+data cuts can be applied using the \mytt{-p} option or \mytt{-l} and
 \mytt{-h} options:
-\begin{quote}
-\mytt{\% gaiadisp -p 98 image\_name1 image\_name2 image\_name3 ...}
-\end{quote}
-\begin{quote}
-\mytt{\% gaiadisp -l 100 -h 200 image\_name1 image\_name2 image\_name3 ...}
-\end{quote}
+\begin{terminalv}
+% gaiadisp -p 98 image_name1 image_name2 image_name3 ...
+
+% gaiadisp -l 100 -h 200 image_name1 image_name2 image_name3 ...
+\end{terminalv}
 (works for the single image case too).
 
 \section{\xlabel{what_does_it_actually_do}What does it actually do?}
@@ -545,7 +308,7 @@ astronomical work with images:
   then you can also plot a grid overlay with labelled
   axes. The grid facility is provided with an enormous range of
   customization options, such as being able to change the
-  celestial coordinate system (from say FK5 to  Galactic {\em etc.}).
+  celestial coordinate system (from say FK5 to  Galactic \emph{etc.}).
 
 \item Celestial coordinate system control. You can change the celestial
   coordinate system used by your image to a new one (to/from FK5,
@@ -564,7 +327,7 @@ astronomical work with images:
 
 \item Object parameterization. This allows you to select a single
   object on the image. Details such as its full width half
-  maximum, peak intensity {\em etc.} will be shown. These values are
+  maximum, peak intensity \emph{etc.} will be shown. These values are
   based on a 2D gaussian fit.
 
 \item STC-S regions. STC-S region outlines (often used to define footprints of
@@ -604,14 +367,12 @@ catalogue and image access, using the developing Virtual
 Observatory. These like the features above are found in the
 \mytt{Data-Servers} menu of the main window.
 
-\begin{htmlonly}
-\\
-\\
-\end{htmlonly}
 
-{\bf Note:} you should take time to find what your obligations, in
+
+
+\textbf{Note:} you should take time to find what your obligations, in
 terms of the correct acknowledgement of copyright, use of service
-{\em etc.} are, whenever you use facilities such as those mentioned
+\emph{etc.} are, whenever you use facilities such as those mentioned
 above.
 
 \subsection{Local catalogues}
@@ -629,8 +390,7 @@ version is called a ``tab separated table'' (TST). This is a simple
 text file in which the values of the various fields are separated by a
 single \mytt{<TAB>} character and the catalogue headers are separated
 from these by a dashed line:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 #  comment
 keyword1: value1
 keyword2: value2
@@ -641,8 +401,7 @@ ID   <TAB>   RA     <TAB>   DEC   <TAB>  MAG     ...
 OBJ1 <TAB>   210.00 <TAB>   54.00 <TAB>  16.1
 OBJ2 <TAB>   210.01 <TAB>   54.01 <TAB>  15.1
 ....
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 The usual format of a catalogue is as above, \textit{i.e.} an object identifier
 followed by an RA and DEC (in J2000 decimal degrees). Note the
 \mytt{<TAB>} strings shouldn't be typed in, they are shown explicitly
@@ -674,21 +433,17 @@ If you have a simple text file containing columns of positions then
 the most straight-forward way to plot them in GAIA is by using the
 `Select Positions...' toolbox. This accepts (as do the various
 astrometry toolboxes) a file containing the following values:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 ID  RA  DEC  X  Y
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 in that order, \textit{e.g.}
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 1   00:19:49.47   00:07:25.9   854    50
 2   00:20:06.71   00:06:05.3   240   244
 3   00:19:47.54   00:04:23.2   925   484
 4   00:19:58.07   00:04:49.1   549   424
 5   00:19:48.69   00:06:59.0   882   114
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 The columns should be space separated and the celestial coordinates
 should be in decimal degrees, or sexagesimal format as shown above. More
 complex files can be imported into this toolbox using its `Import text
@@ -705,8 +460,8 @@ wanted to plot position vectors as correctly orientated lines over an
 image you would need a tab table that contained the following sort of
 information (again note that the \mytt{<TAB>} string should be replace
 by a single tab character):
-\begin{quote}
-\begin{verbatim}
+\begin{small}
+\begin{terminalv}
 # File created by: pwd on June 15, 1999 at 10:24:04
 id_col: 0
 x_col: 1
@@ -717,8 +472,8 @@ ID <TAB>    XPOS    <TAB> YPOS    <TAB> LENGTH   <TAB>  ANGLE
 --          ----          ---           ------          -----
 ID#1 <TAB>  206.000 <TAB> 189.000 <TAB> 6.32528  <TAB>  104.816
 ID#2 <TAB>  209.000 <TAB> 189.000 <TAB> 5.86891  <TAB>  109.238
-\end{verbatim}
-\end{quote}
+\end{terminalv}
+\end{small}
 The \mytt{x\_col} and \mytt{y\_col} parameters indicate the columns of
 the data that correspond to the X and Y positions and the symbol
 parameter how to plot a line centered on that position. In this case
@@ -734,7 +489,7 @@ Creating such a symbol parameter is best done by using the special
 \mytt{Set Plot Symbols...} window, available under the local catalogue
 menu \mytt{Options}. Using this window you can plot multiple symbols per
 object, specify which column to use as labels, change the graphic
-colour {\em etc.}. Now if you look in the file
+colour \emph{etc.}. Now if you look in the file
 \mytt{\~{}/.skycat/skycat.cfg} after setting up your options a suitable
 symbol parameter is recorded together which the description for your
 local catalogue (which you can then edit into your tab files).
@@ -824,36 +579,28 @@ open file window.
 To display a FITS file extension image, either open the disk file and
 choose the extension from the \mytt{HDU} selector window that appears,
 or add the extension number to the disk-file name:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 # gaia mef_file.fits'[2]'
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 The FITS primary array is number $1$.
 
 A similar mechanism exists for NDFs stored in container files at other
 than the top-level:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 # gaia hdscontainer.ndf_1
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 In this case any other NDFs stored at the same level in the container
 file will also be shown in a selector window. NDF slices can also be
 used:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 # gaia hdscontainer.ndf_1'(200:500,100:700)'
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 This can also be applied to FITS files and other foreign formats, but
 note that this means that FITS files will now be accessed as foreign,
 \textit{i.e.} the FITS files will really be NDFs:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 # gaia file.fits'(300:700,300:700)'
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 \subsection{SAMP interoperability}
 
@@ -923,18 +670,19 @@ are best set using the \mytt{Startup options...} window located in the
  -with\_zoom\_window &  Display a zoom window
 \end{tabular}
 }
+
 The full list of options can be seen using the \verb#--help# option.
 
 So for instance if you wanted to float the control panel (useful for
 smaller displays) and have a grey default colourmap. Then start
 using the command:
-\begin{quote}
-\mytt{\% gaia image\_name -default\_cmap ramp -float\_panel 1}
-\end{quote}
+\begin{terminalv}
+% gaia image_name -default_cmap ramp -float_panel 1
+\end{terminalv}
 Or alternatively to save some space without floating the panel try:
-\begin{quote}
-\mytt{\% gaia image\_name -with\_zoom\_window 0 -with\_pan\_window 0}
-\end{quote}
+\begin{terminalv}
+% gaia image_name -with_zoom_window 0 -with_pan_window 0
+\end{terminalv}
 (\mytt{1} means true and \mytt{0} false).
 
 If you'd like the toolboxes to remain on top of the display window
@@ -949,11 +697,9 @@ dialogs unnecessarily take charge of things like the focus.}).
 If you prefer to point at the image and text entry fields before using
 the keyboard, rather than having to click in them first, then use the
 command:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % gaia image_name -focus_follows_mouse 1
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 Some additional configuration options are only available using environment
 variables. The most useful of these is the \mytt{GAIA\_TEMP\_DIR} variable,
